--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "remark-gfm": "^4.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "haversine-distance": "^1.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
