--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@adamscybot/react-leaflet-component-marker": "^2.0.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@material/button": "^14.0.0",
@@ -13,10 +14,12 @@
     "@testing-library/user-event": "^14.6.1",
     "framer-motion": "^12.0.1",
     "haversine-distance": "1.2.3",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.454.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-jss": "^10.10.0",
+    "react-leaflet": "^5.0.0",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^7.1.3",
     "react-scripts": "^5.0.1",
@@ -44,6 +47,7 @@
   "devDependencies": {
     "@babel/plugin-transform-react-jsx": "^7.25.9",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/leaflet": "^1.9.16",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
     "prettier": "3.4.2",
